--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@formkit/themes": "^1.0.0-beta.11",
+        "path-browserify": "^1.0.1",
         "postcss": "^8",
         "typewriter-effect": "^2.19.0"
     },
@@ -21,20 +22,30 @@
         "@popperjs/core": "^2.10.2",
         "@vue/cli-plugin-router": "~5.0.0",
         "@vue/compiler-sfc": "^3.0.0-beta.1",
+        "assert": "^2.0.0",
         "autotyping": "^1.2.6",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
+        "https-browserify": "^1.0.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "mini-css-extract-plugin": "^2.6.1",
         "moment": "^2.29.4",
         "normalize.css": "^8.0.1",
+        "os-browserify": "^0.3.0",
         "postcss": "^8.4.17",
+        "process": "^0.11.10",
+        "react-app-rewired": "^2.2.1",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.0",
         "vue": "^3.2.40",
-        "vue-cli-plugin-i18n": "^0.6.1",
+        "vue-cli-plugin-i18n": "^2.3.1",
         "vue-cli-plugin-tailwind": "~3.0.0",
         "vue-cli-plugin-vue-next": "~0.1.4",
         "vue-i18n": "^9.2.2",
