--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@formkit/themes": "^1.0.0-beta.11",
+        "laravel-vue-pagination": "^4.0.0",
         "path-browserify": "^1.0.1",
         "postcss": "^8",
         "typewriter-effect": "^2.19.0"
