--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     },
     "dependencies": {
         "@formkit/themes": "^1.0.0-beta.11",
+        "chart.js": "^4.3.0",
         "feather-icons": "^4.29.0",
         "laravel-vue-pagination": "^4.0.0",
         "path-browserify": "^1.0.1",
         "postcss": "^8",
         "typewriter-effect": "^2.19.0",
+        "vue-chartjs": "^5.2.0",
         "vue-feather-icons": "^5.1.0"
     },
     "devDependencies": {
